--- a/Cinematic/templates/categoria/index.html
+++ b/Cinematic/templates/categoria/index.html
@@ -3,7 +3,7 @@
   <article class="post">
     <header>
       <div>
-        <h1>Categoria: {{ categoria['name'] }}</h1>
+        <h1> {{ categoria['name'] }}</h1>
       </div>
     </header>
   </article>
