jsonifique algunas cosas, faltan algunos links

--- a/Cinematic/templates/peliculas/detalle.html
+++ b/Cinematic/templates/peliculas/detalle.html
@@ -1,11 +1,10 @@
-{%extends 'base.html'%} {% block content %}
-<header>
+{%extends 'base.html'%} {% block content %} 
   <h1>Categoria: {{movie_info ['categoria']}}</h1>
   <h1>language: {{language_info ['idioma']}}</h1>
   <h1>Año de lanzamiento: {{movie_info ['año_de_lanzamiento']}}</h1>
   <h1>Actores:</h1>
   {% for actor in actor_info %}
-  <a href="{{url_for('peliculas.artistas',id = actor['actor_id'])}}">
+  <a href="{{url_for('actor.detalle',id = actor['actor_id'])}}">
   <h1>{{actor['nombre']}} {{actor['apellido']}}</h1>
   </a>
   {%endfor%}
