--- a/Cinematic/templates/actor/index.html
+++ b/Cinematic/templates/actor/index.html
@@ -3,6 +3,7 @@
   <article class="post">
     <header>
       <div>
+        <a href="{{url_for ('actor.detalle', id =actor ['actor_id'])}}">
         <h1>{{ actor['first_name'] }} {{ actor['last_name'] }}</h1>
       </div>
     </header>
